Update index .html

--- a/index .html
+++ b/index .html
@@ -56,7 +56,7 @@ Unknown infections
 
 <div id="navigation">
 	<ul>
-		<li><b>Artificial intelligence</b></li>
+		<li><b>rule of computer in coronavirus pandemic</b></li>
 	</ul>
 </div>
 
