--- a/index .html
+++ b/index .html
@@ -8,7 +8,7 @@
 	<!-- Fix broken PNG transparency for IE/Win5-6+ -->
 	<!--[if gte IE 5.5000]>
 	<script type="text/javascript" src="pngfix.js"></script>
-	<![endif]--	
+	<![endif]-->	
 
 
 <p>
